refactor(sequence): 优化JDBC序列仓库实现
- 添加SqlInitializationAutoConfiguration支持数据库初始化
- 修正SQL脚本中的语法错误，调整字符集设置格式
- 重命名查询字段映射从sequenceValue到seqValue保持一致性
- 更新错误消息文案从error改为failure提高准确性
- 使用getFirst()替代get(0)改善代码可读性
- 调整内部类SequenceValue字段名称保持命名统一